@@ -1344,6 +1344,7 @@ $1",
 'right-siteadmin'             => '锁定和解除锁定数据库',
 'right-reset-passwords'       => '重设其他用户的密码',
 'right-override-export-depth' => '导出含有五层深度链接页面之页面',
+'right-versiondetail'         => '显示延伸软件版本的资料',
 
 # User rights log
 'rightslog'      => '用户权限日志',
