@@ -1083,6 +1083,7 @@ $wgMessageStructure = array(
 		'right-siteadmin',
 		'right-reset-passwords',
 		'right-override-export-depth',
+		'right-versiondetail',
 	),
 	'rightslog' => array(
 		'rightslog',
